<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung"
    tools:context=".FeedBackData">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="434dp"
        android:layout_height="481dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/detail_page_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="102dp"
            android:layout_height="44dp"
            android:layout_marginEnd="244dp"
            android:layout_marginRight="244dp"
            android:layout_marginBottom="132dp"
            android:background="@drawable/cart_button_bg"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_details"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="132dp"
            android:background="@drawable/cart_button_bg"
            android:enabled="false"
            android:text="@string/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/emailData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameData"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/messageData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Message"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberData"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/phoneNumberData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/store_visited"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailData"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="67dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameData"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center|left"
        android:text="@string/feed_back_page"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>