<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgroung"
    android:layout_height="match_parent"
    tools:context=".model.Productdetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroung"
        tools:context=".model.Productdetails">

        <Button
            android:id="@+id/btnBackTop"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_back_foreground"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/imgMenuPopUp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_back_foreground"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imgMenuPopUp"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_more_foreground"
            tools:ignore="VectorDrawableCompat" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="432dp"
            android:layout_height="441dp"
            android:background="@drawable/detail_page_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="108dp"
                android:background="@drawable/ic_cat_bg_foreground"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center|left"
                android:text="@string/mcDonaldsTitile"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.145"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMcDonaldInfo"
                android:layout_width="365dp"
                android:layout_height="82dp"
                android:layout_marginTop="8dp"
                android:text="@string/mcDonaldInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/txtMcDonaldQuestion"
                android:layout_width="373dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/questionReview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/txtMcDonaldInfo" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="72dp"
                android:background="@drawable/ic_backicone2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnMcDonaldSubmit"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_minus_foreground"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/btnMcDonaldSubmit"
                android:layout_width="154dp"
                android:layout_height="48dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="56dp"
                android:background="@drawable/cart_button_bg"
                android:text="@string/submit_review"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="278dp"
            android:layout_height="386dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_mcdonaldlogo"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="386dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_mcdonaldlogo"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>