<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="80dp"
        android:layout_height="721dp"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/lidypng"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:rotation="0"
            android:textColor="#373131"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/feedbackimg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="feedBackBtn"
            android:rotation="0"
            android:textColor="#373131"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPopUpMenu"
            app:layout_constraintVertical_bias="0.795" />

        <Button
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginBottom="28dp"
            android:autoText="false"
            android:background="@drawable/mapp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/rubik_bold_italic"
            android:gravity="center"
            android:onClick="instaMapBtn"
            android:rotation="0"
            android:textColor="#005B1B"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="57dp"
            android:layout_marginBottom="136dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_search_foreground"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/btnPopUpMenu"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:layout_marginTop="108dp"
            android:background="@drawable/ic_menulogo"
            android:onClick="showPopup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/hello_emma"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/subTittle"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/willsmith" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cat_recycler"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler"
        android:layout_width="318dp"
        android:layout_height="385dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/cat_recycler"
        app:layout_constraintVertical_bias="0.053"
        tools:listitem="@layout/products_row_item" />

    <Button
        android:id="@+id/btnSuuub"
        android:layout_width="187dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/cart_button_bg"

        android:text="@string/feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/product_recycler"
        app:layout_constraintVertical_bias="0.891" />

    <TextView
        android:id="@+id/txtMainReviewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/questionReview"
        app:layout_constraintBottom_toTopOf="@+id/btnSuuub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/product_recycler"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>